--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.9",
     "needle": "^2.6.0",
-    "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.53.0",
-    "puppeteer": "^9.1.1",
-    "ytdl-core": "^4.7.0"
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "dotenv": "^9.0.2",
